--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,15 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 
 android {
+
+    dataBinding {
+        enabled = true
+    }
+
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
@@ -14,8 +19,20 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath true
+            }
+        }
     }
     buildTypes {
+
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -24,12 +41,76 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+
+    api fileTree(dir: 'libs', include: ['*.jar'])
+
+    //kotlin
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
+    api "org.jetbrains.kotlin:kotlin-reflect:1.3.61"
+    //  api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
+    //android support & recyclerview
+    //implementation 'com.google.android.material:material:1.2.0-alpha02'
+    api 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.core:core-ktx:1.2.0'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api 'androidx.cardview:cardview:1.0.0'
+    api 'androidx.recyclerview:recyclerview:1.1.0'
+
+
+
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    // api 'com.google.android.material:material-rc01:1.0.0'
+
+
+    //Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
+    // LiveData & ViewModel
+    api "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
+    // Room
+    api "androidx.room:room-runtime:2.2.3"
+    kapt "androidx.room:room-compiler:2.2.3"
+
+
+    // Retrofit
+    api "com.squareup.retrofit2:retrofit:$retrofit_version"
+    api "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    api "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+
+    //Logging
+    api 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+
+
+    //Dagger
+    api 'com.google.dagger:dagger:2.25.2'
+    kapt 'com.google.dagger:dagger-compiler:2.25.2'
+    api "com.google.dagger:dagger-android:2.22.1"
+    api "com.google.dagger:dagger-android-support:2.22.1"
+    kapt 'com.google.dagger:dagger-android-processor:2.22.1'
+    kaptAndroidTest "com.google.dagger:dagger-compiler:2.25.2"
+
+
+    //Rx
+    api "io.reactivex.rxjava2:rxjava:2.2.10"
+    api "io.reactivex.rxjava2:rxandroid:2.1.1"
+
+    api 'com.squareup.retrofit2:converter-gson:2.6.1'
+
+
+    // Add Coroutines
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.3.2'
+
+
+    //ButterKnife
+    api "com.jakewharton:butterknife:$butterKnifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
 }
