--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-
+apply from: 'obfuscationUtils.gradle'
 
 android {
 
@@ -25,6 +25,11 @@ android {
                 includeCompileClasspath true
             }
         }
+
+
+        //For obfuscate base url of Api
+        buildConfigField 'String', 'API_BASE_URL', obfuscateJavaToByteString("https://api.boomset.com/")
+
     }
     buildTypes {
 
