--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
@@ -63,7 +65,6 @@ dependencies {
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
     api 'androidx.cardview:cardview:1.0.0'
     api 'androidx.recyclerview:recyclerview:1.1.0'
-
 
 
     api 'androidx.legacy:legacy-support-v4:1.0.0'
