--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ apply from: 'obfuscationUtils.gradle'
 
 android {
 
+    lintOptions {
+        abortOnError false
+    }
+
     dataBinding {
         enabled = true
     }
@@ -44,6 +48,17 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    packagingOptions {
+        pickFirst 'META-INF/kotlinx-io.kotlin_module'
+        pickFirst 'META-INF/atomicfu.kotlin_module'
+        pickFirst 'META-INF/kotlinx-coroutines-io.kotlin_module'
+    }
+
     useLibrary 'org.apache.http.legacy'
 }
 
@@ -59,6 +74,7 @@ dependencies {
 
 
     //android support & recyclerview
+
     //implementation 'com.google.android.material:material:1.2.0-alpha02'
     api 'androidx.appcompat:appcompat:1.1.0'
     api 'androidx.core:core-ktx:1.2.0'
@@ -95,13 +111,25 @@ dependencies {
 
 
     //Dagger
-    api 'com.google.dagger:dagger:2.25.2'
-    kapt 'com.google.dagger:dagger-compiler:2.25.2'
-    api "com.google.dagger:dagger-android:2.22.1"
-    api "com.google.dagger:dagger-android-support:2.22.1"
-    kapt 'com.google.dagger:dagger-android-processor:2.22.1'
-    kaptAndroidTest "com.google.dagger:dagger-compiler:2.25.2"
 
+    //Dagger Android
+    def dagger_version = "2.24"
+    api "com.google.dagger:dagger:$dagger_version"
+    api "com.google.dagger:dagger-android:$dagger_version"
+    api "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+
+
+    /*
+       def daggerVer = "2.22.1" // or latest version
+
+       api "com.google.dagger:dagger:$daggerVer"
+       api "com.google.dagger:dagger-android-support:$daggerVer"
+       kapt "com.google.dagger:dagger-android-processor:$daggerVer"
+       kapt "com.google.dagger:dagger-compiler:$daggerVer"
+       compileOnly 'javax.annotation:jsr250-api:1.0'
+     */
 
     //Rx
     api "io.reactivex.rxjava2:rxjava:2.2.10"
@@ -110,13 +138,18 @@ dependencies {
     api 'com.squareup.retrofit2:converter-gson:2.6.1'
 
 
+    /*
     // Add Coroutines
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.3.2'
+*/
 
-
+    /*
     //ButterKnife
-    api "com.jakewharton:butterknife:$butterKnifeVersion"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
+    api 'com.jakewharton:butterknife:10.0.0'
+    kapt 'com.jakewharton:butterknife-compiler:10.0.0'
+
+     */
+
 }
