--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+
 
         <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
@@ -23,8 +24,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.guest.GuestListActivity"></activity>
-        <activity android:name=".ui.event.EventListActivity" />
+        <activity android:name=".ui.guest.GuestListActivity"
+            android:label="@string/live_events"
+            />
+        <activity android:name=".ui.event.EventListActivity"
+            android:label="@string/live_events"
+            />
 
         <uses-library
             android:name="org.apache.http.legacy"
