--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,10 +88,23 @@ dependencies {
 
 
     //Testing
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testApi 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+    testApi 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+    testApi 'org.junit.platform:junit-platform-runner:1.5.2'
+    androidTestApi 'androidx.test.ext:junit:1.1.1'
+    androidTestApi "org.assertj:assertj-core:3.14.0"
+    androidTestApi "androidx.arch.core:core-testing:2.1.0"
+    androidTestApi ('androidx.test.espresso:espresso-core:3.2.0',{
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    api 'androidx.test:rules:1.2.0'
+    api 'androidx.test.espresso:espresso-idling-resource:3.2.0'
+    api 'androidx.test.espresso:espresso-contrib:3.2.0'
+    api 'androidx.arch.core:core-testing:2.1.0'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
 
+    //Mockk
+    api 'io.mockk:mockk:1.9.2'
 
     // LiveData & ViewModel
     api "androidx.lifecycle:lifecycle-extensions:2.2.0"
